@@ -25,6 +25,7 @@
     * livestatus_status: new check for monitoring performance of monitoring
     * FIX: diskstat.include: fix computation of queue length on windows
       (thanks to K.H. Fiebig)
+    * lnx_bonding: new check for checking bonding interfaces on Linux
 
     Multisite:
     * Added comment painter to notification related views
